Naftah - updated jvm options - scripts